fixing sticky footer bug on safari

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -12,7 +12,6 @@ html {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 100%;
 }
 
 
